# ehr-data-explainer

./: .dockerignore  .env.example  .gitignore  IMPLEMENTATION_GUIDE.md  README.md  docker-compose.yml
backend/: Dockerfile  __init__.py  config.py  main.py  pyproject.toml
backend/etl/: __init__.py  body_systems.py  fhir_to_neo4j.py
backend/services/: explanation_service.py  patient_service.py  video_service.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  vite-env.d.ts
frontend/src/components/: ExplanationDisplay.tsx  PatientGraph.tsx  PatientSelector.tsx  VideoPlayer.tsx
scripts/: load_sample_data.py  quick_load.py
